Performance improvement and version bump
- Rakija is now compiling against latest BinClient
- Single thread executor now replaced by a thread pool with core pool size of 2 threads.

--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,9 @@ dependencies {
     compile ('com.mrivanplays:TeamTreesClient:1.0-SNAPSHOT') {
         exclude module: 'okhttp'
     }
-    compile('com.mrivanplays:BinClient:1.0.0-SNAPSHOT') {
+    compile('com.mrivanplays:BinClient:1.0.1-SNAPSHOT') {
         exclude module: 'okhttp'
+        exclude module: 'json'
     }
 }
 
