--- a/build.gradle
+++ b/build.gradle
@@ -27,15 +27,15 @@ configurations.all {
 }
 
 dependencies {
-    implementation group: 'com.mrivanplays', name: 'yalifslf4j', version: '1.0.2-SNAPSHOT'
-    implementation(group: 'net.dv8tion', name: 'JDA', version: '4.1.0_95') {
+    implementation group: 'com.mrivanplays', name: 'yalifslf4j-base', version: '1.0.3-SNAPSHOT'
+    implementation group: 'com.mrivanplays', name: 'yalifslf4j-configprovider-jackson', version: '1.0.3-SNAPSHOT'
+    implementation(group: 'net.dv8tion', name: 'JDA', version: '4.1.1_101') {
         exclude module: 'slf4j-api'
     }
     implementation(group: 'com.jagrosh', name: 'jda-utilities', version: '3.0.2') {
         exclude module: 'jda-utilities-command'
         exclude module: 'jda-utilities-examples'
         exclude module: 'slf4j'
-        exclude module: 'json'
     }
 
     implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.33'
