--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,17 @@
 {
     "token": "bot token comes here",
     "owner": "discord user bot owner id comes here",
+    "moderatorGroups": [
+        "list all",
+        "moderator roles",
+        "here"
+    ],
+    "purgeBlacklist": [
+        "all channel names that",
+        "should be blacklisted from",
+        "clearing messages"
+    ],
+    "transcriptsChannel": 23232323 // tickets transcripts channel's id,
     "logExecutedCommands": shouldWeLogExecutedCommands (true or false),
     "commandsChannel": 22323 // (OPTIONAL) commands channel's id
 }
