--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ configurations.all {
 dependencies {
     implementation group: 'com.mrivanplays', name: 'yalifslf4j-base', version: '1.0.3-SNAPSHOT'
     implementation group: 'com.mrivanplays', name: 'yalifslf4j-configprovider-jackson', version: '1.0.3-SNAPSHOT'
-    implementation(group: 'net.dv8tion', name: 'JDA', version: '4.1.1_104') {
+    implementation(group: 'net.dv8tion', name: 'JDA', version: '4.1.1_105') {
         exclude module: 'slf4j-api'
     }
     implementation(group: 'com.jagrosh', name: 'jda-utilities', version: '3.0.2') {
@@ -40,9 +40,7 @@ dependencies {
 
     implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.34'
     implementation group: 'com.mrivanplays', name: 'JDCF', version: '1.0.4-SNAPSHOT'
-    implementation(group: 'com.mrivanplays', name: 'TeamTreesClient', version: '1.0-SNAPSHOT') {
-        exclude module: 'okhttp'
-    }
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
     implementation(group: 'com.mrivanplays', name: 'BinClient', version: '1.0.1-SNAPSHOT') {
         exclude module: 'okhttp'
         exclude module: 'json'
